@@ -390,7 +390,7 @@ DeclareOneGlobalVar(Module *P, AST *ident, AST *type)
         ident = ident->left;
     }
     if (ident->kind == AST_ARRAYDECL) {
-        type = NewAST(AST_ARRAYTYPE, type, ident->right);
+        type = MakeArrayType(type, ident->right);
         type->d.ptr = ident->d.ptr;
         ident = ident->left;
     }
